--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 # Project exclude paths
 /cmake-build-debug/
+/.idea/.gitignore
+/.idea/KREW.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
